tests/tests/ui-unstable/non-string.stderr
thread 'rustc' panicked at 'argument must be a single string literal', impl/src/lib.rs:78:13
note: Run with `RUST_BACKTRACE=1` for a backtrace.
error: proc macro panicked
  --> $DIR/non-string.rs:13:5
   |
13 |     indoc!(64);
   |     ^^^^^^^^^^^
   |
   = help: message: argument must be a single string literal

